<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/im1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/earth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_welcome_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/im1"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_signup"
        android:textSize="18dp"
        android:textColor="@color/color_sky"
        />

    <EditText
        android:id="@+id/et_your_phone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_welcome_signup"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_shape"
        android:hint="@string/your_phone"
        android:inputType="phone"
        android:textColorHint="@color/color_brightgray"
        android:textSize="18dp" />
    <!--android:inputType="phone"只能輸入手機號碼，輸入鍵盤就只會顯示數字-->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_your_phone"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_shape"
        android:hint="@string/name"
        android:textColorHint="@color/color_brightgray"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/et_new_account"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_shape"
        android:hint="@string/new_account"
        android:textColorHint="@color/color_brightgray"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_new_account"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_shape"
        android:hint="@string/new_password"
        android:textColorHint="@color/color_brightgray"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/et_again_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_new_password"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_shape"
        android:hint="@string/again_password"
        android:textColorHint="@color/color_brightgray"
        android:textSize="18dp" />
    <TextView
        android:id="@+id/tv_check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textColor="@color/color_red"
        android:textSize="15dp"
        android:layout_below="@id/et_again_password"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="50dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="20dp"
        android:textColor="@color/color_brightblue"
        android:background="@drawable/my_button"
        android:layout_below="@id/et_again_password"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="110dp"
        />
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20dp"
        android:textColor="@color/color_brightblue"
        android:background="@drawable/my_button"
        android:layout_below="@id/et_again_password"
        android:layout_toRightOf="@id/tv_confirm"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="55dp"
        />
</RelativeLayout>