<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/earth"
        />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_slogon"
        android:textSize="18dp"
        android:textColor="@color/color_sky"
        />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_welcome"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_shape"
        android:inputType="text"
        android:textSize="18dp"
        android:hint="@string/account"
        android:textColorHint="@color/color_brightgray"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_account"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_shape"
        android:inputType="textPassword"
        android:textSize="18dp"
        android:hint="@string/password"
        android:textColorHint="@color/color_brightgray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:textColor="@color/color_red"
        android:textSize="15dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColor="@color/color_brightblue"
        android:background="@drawable/my_button"
        android:layout_below="@id/et_password"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="105dp"
        />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="20dp"
        android:textColor="@color/color_brightblue"
        android:background="@drawable/my_button"
        android:layout_toRightOf="@id/tv_login"
        android:layout_below="@id/et_password"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="55dp"
        />

</RelativeLayout>