<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_brightgray"
        android:layout_above="@+id/ly_tabplace"
        />
    <!--以上iv只是為了上畫線-->
    <!--px的作用於不會因為適配(dp)跑掉-->

    <LinearLayout
        android:id="@+id/ly_tabplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:id="@+id/ry_message_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp">
            <ImageView
                android:id="@+id/im_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/message_ori"
                android:scaleType="fitXY"
                />
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/im_message"
                android:layout_marginTop="3dp"
                android:layout_centerHorizontal="true"
                android:text="@string/message"
                android:textSize="13dp"
                android:textColor="@color/color_darkgray"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ry_contact_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp">
            <ImageView
                android:id="@+id/im_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/contact_ori"
                android:scaleType="fitXY"
                />
            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/im_contact"
                android:layout_marginTop="3dp"
                android:layout_centerHorizontal="true"
                android:text="@string/contact"
                android:textSize="13dp"
                android:textColor="@color/color_darkgray"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ry_dynamic_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp">
            <ImageView
                android:id="@+id/im_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dynamic_ori"
                android:scaleType="fitXY"
                />
            <TextView
                android:id="@+id/tv_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/im_dynamic"
                android:layout_marginTop="3dp"
                android:layout_centerHorizontal="true"
                android:text="@string/instant_state"
                android:textSize="13dp"
                android:textColor="@color/color_darkgray"
                />
        </RelativeLayout>
    </LinearLayout>
    <!--先做出框架layout再放入內容物，東西就比較不會跑掉，觸控範圍(按鈕按下)也會變大-->


</RelativeLayout>